--- a/assets/scss/edit_profile.scss
+++ b/assets/scss/edit_profile.scss
@@ -74,14 +74,33 @@ article {
                             top: 22px;
                             left: 22px;
                             color: $color-green;
+                            transition: all .3s;
+                            &.has-focus {
+                                top: 9px;
+                                font-size: 12px;
+                            }
                         }
                         input {
                             width: 100%;
                             height: 66px;
+                            color: $color-green;
                             padding: 30px 22px 15px 22px;
                             border: 1px solid $color-green;
                             border-radius: 3px;
-                            outline: none
+                            outline: none;
+                            &#email, &#address {
+                                margin-bottom: 15px;
+                            }
+                            &::-webkit-datetime-edit, &::-webkit-calendar-picker-indicator {
+                                opacity: 0;
+                                transition: opacity .3s;
+                            }
+                            &::-webkit-calendar-picker-indicator {
+                                cursor: pointer;
+                            }
+                            &:focus::-webkit-datetime-edit, &:focus::-webkit-calendar-picker-indicator {
+                                opacity: 1;
+                            }
                         }
                         small {
                             font-size: 12px;
@@ -89,6 +108,43 @@ article {
                             margin: 9px 0 25px 0;
                             display: block;
                         }
+                        &.btn-group {
+                            margin-top: 35px;
+                            button {
+                                &.submit-btn {
+                                    font-size: 20px;
+                                    width: 271px;
+                                    height: 70px;
+                                    margin-right: 38px;
+                                    background: $color-green;
+                                    border: 0;
+                                    border-radius: 35px;
+                                    outline: none;
+                                }
+                                &.reset-btn {
+                                    font-size: 20px;
+                                    color: $color-base;
+                                    text-decoration: underline;
+                                    background: #0000;
+                                    border: 0;
+                                    outline: none;
+                                }
+                            }
+                        }
+                    }
+                    .email-verified {
+                        font-size: 12px;
+                        color: $color-base;
+                        margin: 44px 0 11px 0;
+                        img {
+                            margin-right: 10px;
+                        }
+                    }
+                    h2 {
+                        font-family: $font-Basier-medium;
+                        font-size: 16px;
+                        color: $color-green;
+                        margin: 48px 0 22px 0;
                     }
                 }
             }
