--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @font-face {
   font-family: "Basier Circle Bold";
   src: url("../fonts/BasierCircle-Bold.eot");
@@ -689,7 +690,7 @@ aside.sidebar .accordion-footer ul a:hover {
   cursor: pointer;
 }
 .card-favorite:before {
-  content: "\f417";
+  content: "";
   display: inline-block;
   font-family: bootstrap-icons !important;
   font-style: normal;
@@ -702,7 +703,7 @@ aside.sidebar .accordion-footer ul a:hover {
   -moz-osx-font-smoothing: grayscale;
 }
 .card-favorite.active:before, .card-favorite:hover:before {
-  content: "\f415";
+  content: "";
 }
 
 .card-rating {
