--- a/assets/css/write_review.css
+++ b/assets/css/write_review.css
@@ -80,17 +80,17 @@ article .review-write .product-details-tags {
   justify-content: space-between;
 }
 article .review-write .btn {
-  width: calc(16.6666666667% - 0.5rem);
+  width: calc(calc(100% / 6) - 0.5rem);
   margin: 0 0 0.5rem;
 }
 @media screen and (max-width: 991px) {
   article .review-write .btn {
-    width: calc(33.3333333333% - 0.5rem);
+    width: calc(calc(100% / 3) - 0.5rem);
   }
 }
 @media screen and (max-width: 575px) {
   article .review-write .btn {
-    width: calc(50% - 0.5rem);
+    width: calc(calc(100% / 2) - 0.5rem);
   }
 }
 article .review-header {
