--- a/assets/css/learn_detail.css
+++ b/assets/css/learn_detail.css
@@ -79,128 +79,6 @@ section.section-welcome .card-title {
   margin-bottom: 1rem;
 }
 
-.swiper {
-  width: calc(100% - 5px);
-  min-height: 500px;
-  height: 100%;
-  border-radius: 1rem;
-  overflow: hidden;
-  margin-right: 0;
-}
-.swiper-wrapper, .swiper-slide {
-  height: 100%;
-  position: relative;
-}
-.swiper-img {
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-}
-.swiper-img img {
-  object-fit: cover;
-  object-position: center;
-  width: 100%;
-  height: 100%;
-}
-.swiper-button-prev, .swiper-button-next {
-  background-color: #00423E;
-  width: 50px;
-  height: 50px;
-  border-radius: 0.25rem;
-  top: auto;
-  bottom: 30px;
-  left: auto;
-  transition: all 0.15s ease-in-out;
-}
-.swiper-button-prev:hover, .swiper-button-next:hover {
-  background-color: #3E9E6C;
-}
-.swiper-button-prev:after, .swiper-button-next:after {
-  content: "";
-  width: 0;
-  height: 0;
-  position: absolute;
-  top: 40%;
-  left: 40%;
-}
-.swiper-button-prev {
-  right: 410px;
-}
-.swiper-button-prev:after {
-  content: "";
-  border-style: solid;
-  border-width: 5px 10px 5px 0;
-  border-color: transparent #3FDD6E transparent transparent;
-}
-.swiper-button-next {
-  right: 350px;
-}
-.swiper-button-next::after {
-  content: "";
-  border-style: solid;
-  border-width: 5px 0 5px 10px;
-  border-color: transparent transparent transparent #3FDD6E;
-}
-
-.section-slide-2 {
-  margin-top: 5px;
-}
-.section-slide-2 .card {
-  background-color: #3E9E6C;
-  color: #fff;
-  border: none;
-  text-align: left;
-  border-radius: 1rem;
-  overflow: hidden;
-  position: relative;
-  z-index: 2;
-  height: 100%;
-  min-height: 550px;
-  color: #fff;
-}
-.section-slide-2 .card-body {
-  padding: 2.5rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-.section-slide-2 .card-title {
-  color: #fff;
-  margin-bottom: 0;
-}
-.section-slide-2 .card-text {
-  margin: 1.5rem 0;
-}
-.section-slide-2 .card .btn {
-  width: 100%;
-  max-width: 200px;
-  padding: 15px;
-  font-family: "Basier Circle Medium";
-  border-radius: 60px;
-  color: #fff;
-  text-transform: uppercase;
-}
-.section-slide-2 .swiper {
-  min-height: 550px;
-}
-.section-slide-2 .swiper-slide {
-  border-radius: 1rem;
-  overflow: hidden;
-}
-.section-slide-2 .swiper-content {
-  min-height: 550px;
-  height: 100%;
-  margin-left: auto;
-}
-.section-slide-2 .swiper-button-next {
-  right: calc(33.33333333% + 30px);
-}
-.section-slide-2 .swiper-button-prev {
-  right: calc(33.33333333% + 90px);
-}
-
 .sidebar .tags {
   padding-right: 4rem;
 }
@@ -221,7 +99,36 @@ section.section-welcome .card-title {
 }
 
 .learn-content h2 {
-  font-size: 18px;
+  font-size: 30px;
+}
+.learn-content .share-this-page ul {
+  display: flex;
+}
+@media screen and (min-width: 992px) {
+  .learn-content .share-this-page ul li {
+    margin-left: 1rem;
+  }
+}
+@media screen and (max-width: 991px) {
+  .learn-content .share-this-page ul li {
+    margin-top: 1rem;
+    margin-right: 1rem;
+  }
+}
+.learn-content .share-this-page ul li a {
+  font-size: 1rem;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #000000;
+  color: #fff;
+  transition: all 0.25s ease-in-out;
+}
+.learn-content .share-this-page ul li a:hover {
+  background-color: #3E9E6C;
 }
 .learn-content .card {
   border: 1px solid #EAEAEA;
@@ -260,5 +167,8 @@ section.section-welcome .card-title {
   padding: 1rem;
   font-size: 13px;
 }
+.learn-content .details p {
+  margin: 1rem 0;
+}
 
-/*# sourceMappingURL=learn.css.map */
+/*# sourceMappingURL=learn_detail.css.map */
