--- a/assets/scss/learn.scss
+++ b/assets/scss/learn.scss
@@ -221,14 +221,22 @@ section {
 	.card {
 		border: 1px solid $color-grey;
         margin-bottom: 1.5rem;
+		color: $color-base;
+		&:hover{
+			img{
+				transform: scale(1.1);
+			}
+		}
 		&-img {
 			height: 125px;
 			position: relative;
+			overflow: hidden;
 			img {
 				object-fit: cover;
 				object-position: center;
 				width: 100%;
 				height: 100%;
+				transition: all .25s ease-in-out;
 			}
 		}
 		&-tag {
