--- a/assets/css/learn_detail.css
+++ b/assets/css/learn_detail.css
@@ -60,6 +60,9 @@ section h4 {
 section h4 {
   font-size: 18px;
 }
+section a {
+  color: #3E9E6C;
+}
 section a:not([href]):not([class]), section a:not([href]):not([class]):hover {
   color: #3E9E6C;
   text-decoration: underline;
@@ -167,8 +170,129 @@ section.section-welcome .card-title {
   padding: 1rem;
   font-size: 13px;
 }
+.learn-content .details {
+  /* This element defines the size the iframe will take.
+  In this example we want to have a ratio of 25:14 */
+  /* Adjust the iframe so it's rendered in the outer-width and outer-height of it's parent */
+}
+.learn-content .details .aspect-ratio {
+  position: relative;
+  width: 100%;
+  height: 0;
+  padding-bottom: 56.25%;
+  /* The height of the item will now be 56.25% of the width. */
+}
+.learn-content .details .aspect-ratio iframe {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+}
 .learn-content .details p {
   margin: 1rem 0;
+}
+
+.review-wrapper a {
+  text-decoration: underline;
+}
+.review-wrapper .btn-outline {
+  border-color: #3E9E6C;
+  background: transparent;
+  color: #3E9E6C;
+  text-transform: capitalize;
+  border-radius: 60px;
+  padding: 10px 30px;
+  min-width: 130px;
+  text-transform: uppercase;
+  border-width: 1px;
+  text-decoration: none;
+}
+.review-wrapper .btn-outline:hover {
+  background-color: #3E9E6C;
+  color: #fff !important;
+}
+.review-wrapper .review-list .border-start {
+  border-color: #3E9E6C !important;
+}
+.review-wrapper .review-list .card {
+  border-radius: 15px;
+  margin-bottom: 30px;
+}
+.review-wrapper .review-list .card-header {
+  background-color: transparent;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px 30px;
+}
+.review-wrapper .review-list .card-info {
+  display: flex;
+  align-items: center;
+}
+.review-wrapper .review-list .card-info .author {
+  max-width: 100px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+.review-wrapper .review-list .card-body {
+  padding: 30px;
+}
+.review-wrapper .review-list .card-footer {
+  color: #9c9c9c;
+  font-size: 13px;
+  align-items: flex-end;
+}
+.review-wrapper .review-list .card-helpful .btn-helpful {
+  color: #3E9E6C;
+  font-family: "Basier Circle Medium";
+  margin-top: 20px;
+}
+.review-wrapper .review-list .card-helpful .btn-helpful i {
+  margin-right: 5px;
+}
+.review-wrapper .review-list .card-desc span {
+  color: #9c9c9c;
+  font-size: 13px;
+}
+.review-wrapper .review-list .card-date {
+  font-size: 80%;
+}
+.review-wrapper .review-list .card-rating {
+  border: none;
+  margin: 0 0 0 15px;
+  padding: 0 0 0 15px;
+}
+.review-title span {
+  color: #bfbfbf;
+  font-size: 16px;
+}
+
+.comment-content textarea {
+  background: #f6f7f6;
+  width: 100%;
+  border-radius: 12px;
+  border-color: #e7e7e7;
+  padding: 1.5rem;
+  resize: none;
+}
+.comment-content textarea:focus {
+  box-shadow: none;
+  outline: none;
+}
+.comment-content .btn-link {
+  background: transparent;
+  border: none;
+  color: #707170;
+  margin-right: 1.5rem;
+}
+.comment-desc {
+  border-radius: 5px;
+  padding: 10px;
+  margin-left: 10px;
+  color: #b5b5b5;
+  font-size: 90%;
 }
 
 /*# sourceMappingURL=learn_detail.css.map */
