--- a/assets/scss/learn_detail.scss
+++ b/assets/scss/learn_detail.scss
@@ -18,6 +18,7 @@ section {
 	}
 
 	a {
+		color: $color-green;
 		&:not([href]):not([class]),
 		&:not([href]):not([class]):hover {
 			color: $color-green;
@@ -80,9 +81,9 @@ section {
 				@media screen and (min-width: 992px) {
 					margin-left: 1rem;
 				}
-                @media screen and (max-width: 991px) {
+				@media screen and (max-width: 991px) {
 					margin-top: 1rem;
-                    margin-right: 1rem;
+					margin-right: 1rem;
 				}
 				a {
 					font-size: 1rem;
@@ -143,8 +144,145 @@ section {
 		}
 	}
 	.details {
+		/* This element defines the size the iframe will take.
+		In this example we want to have a ratio of 25:14 */
+		.aspect-ratio {
+			position: relative;
+			width: 100%;
+			height: 0;
+			padding-bottom: 56.25%; /* The height of the item will now be 56.25% of the width. */
+		}
+
+		/* Adjust the iframe so it's rendered in the outer-width and outer-height of it's parent */
+		.aspect-ratio iframe {
+			position: absolute;
+			width: 100%;
+			height: 100%;
+			left: 0;
+			top: 0;
+		}
 		p {
 			margin: 1rem 0;
 		}
+	}
+}
+
+
+.review {
+	&-wrapper {
+		a {
+			text-decoration: underline;
+		}
+		.btn-outline {
+			border-color: $color-green;
+			background: transparent;
+			color: $color-green;
+			text-transform: capitalize;
+			border-radius: 60px;
+			padding: 10px 30px;
+			min-width: 130px;
+			text-transform: uppercase;
+			border-width: 1px;
+			text-decoration: none;
+
+			&:hover {
+				background-color: $color-green;
+				color: $color-white !important;
+			}
+		}
+		.review-list {
+			.border-start {
+				border-color: $color-green !important;
+			}
+			.card {
+				border-radius: 15px;
+				margin-bottom: 30px;
+				&-header {
+					background-color: transparent;
+					display: flex;
+					align-items: center;
+					justify-content: space-between;
+					padding: 20px 30px;
+				}
+				&-info {
+					display: flex;
+					align-items: center;
+					.author {
+						max-width: 100px;
+						overflow: hidden;
+						text-overflow: ellipsis;
+						white-space: nowrap;
+					}
+				}
+				&-body {
+					padding: 30px;
+				}
+				&-footer {
+					color: #9c9c9c;
+					font-size: 13px;
+					align-items: flex-end;
+				}
+				&-helpful {
+					.btn-helpful {
+						color: $color-green;
+						font-family: $font-Basier-medium;
+						margin-top: 20px;
+						i {
+							margin-right: 5px;
+						}
+					}
+				}
+				&-desc {
+					span {
+						color: #9c9c9c;
+						font-size: 13px;
+					}
+				}
+				&-date {
+					font-size: 80%;
+				}
+				&-rating {
+					border: none;
+					margin: 0 0 0 15px;
+					padding: 0 0 0 15px;
+				}
+			}
+		}
+	}
+	&-title {
+		span {
+			color: #bfbfbf;
+			font-size: 16px;
+		}
+	}
+}
+
+.comment {
+	&-content {
+		textarea {
+			background: #f6f7f6;
+			width: 100%;
+			border-radius: 12px;
+			border-color: #e7e7e7;
+			padding: 1.5rem;
+			resize: none;
+			&:focus {
+				box-shadow: none;
+				outline: none;
+			}
+		}
+		.btn-link {
+			background: transparent;
+			border: none;
+			color: #707170;
+			margin-right: 1.5rem;
+		}
+	}
+	&-desc {
+		border-radius: 5px;
+		padding: 10px;
+		margin-left: 10px;
+		color: #b5b5b5;
+		font-size: 90%;
 	}
 }
