--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -361,6 +361,7 @@ aside {
 				border-left: none;
 				border-right: none;
 				border-color: $color-grey;
+				border-radius: 0;
 			}
 			&-button {
 				background-color: transparent;
