--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -92,6 +92,16 @@ header .nav-top {
   height: 118px;
   background: #00423E;
 }
+@media screen and (max-width: 767px) {
+  header .nav-top {
+    padding: 10px 0 20px;
+  }
+}
+header .nav-top .logo {
+  max-width: 180px;
+  margin: 0 auto 1rem;
+  display: block;
+}
 header .nav-top .auth_button a {
   font-size: 13px;
   color: #fff;
@@ -110,6 +120,11 @@ header .nav-top .auth_button a:first-of-type:after {
   background: #3FDD6E;
   position: relative;
   right: -17px;
+}
+@media screen and (max-width: 767px) {
+  header .nav-top .user_profile {
+    display: none !important;
+  }
 }
 header .nav-top .user_profile .user_welcome {
   margin-right: 48px;
@@ -156,12 +171,23 @@ header .nav-bottom {
   background: #fff;
   border-bottom: 1px solid #EAEAEA;
 }
+@media screen and (max-width: 767px) {
+  header .nav-bottom {
+    height: 50px;
+  }
+}
 header .nav-bottom .hamburger-menu {
   width: 80px;
   height: 75px;
   border-left: 1px solid #EAEAEA;
   border-right: 1px solid #EAEAEA;
   cursor: pointer;
+}
+@media screen and (max-width: 767px) {
+  header .nav-bottom .hamburger-menu {
+    height: 50px;
+    width: 50px;
+  }
 }
 header .nav-bottom .hamburger-menu span {
   width: 24px;
@@ -185,6 +211,11 @@ header .nav-bottom form {
   position: relative;
   border-right: 1px solid #EAEAEA;
 }
+@media screen and (max-width: 767px) {
+  header .nav-bottom form {
+    width: calc(100% - 70px);
+  }
+}
 header .nav-bottom form input {
   font-size: 15px;
   color: #3E9E6C;
@@ -207,6 +238,22 @@ header .nav-bottom form button {
   background: #0000;
   border: 0;
 }
+@media screen and (max-width: 767px) {
+  header .nav-bottom nav {
+    position: fixed;
+    width: 250px;
+    height: 100%;
+    top: 0;
+    right: 0;
+    background: #fff;
+    padding: 10px 0;
+    transition: all 0.25s linear;
+    transform: translateX(100%);
+  }
+  header .nav-bottom nav.active {
+    transform: translateX(0);
+  }
+}
 header .nav-bottom nav ul {
   list-style: none;
   padding: 0;
@@ -214,10 +261,23 @@ header .nav-bottom nav ul {
   display: flex;
   margin: 0 -33px;
 }
+@media screen and (max-width: 767px) {
+  header .nav-bottom nav ul {
+    flex-direction: column;
+    margin: 0;
+  }
+}
 header .nav-bottom nav ul li a {
   font-size: 15px;
   color: #4E4E4E;
   padding: 15px 33px;
+}
+@media screen and (max-width: 767px) {
+  header .nav-bottom nav ul li a {
+    font-size: 15px;
+    padding: 5px 20px;
+    display: block;
+  }
 }
 
 footer {
@@ -319,6 +379,11 @@ article .btn-outline:hover {
 
 aside.sidebar {
   margin-top: 90px;
+}
+@media screen and (max-width: 767px) {
+  aside.sidebar {
+    margin-top: 0;
+  }
 }
 aside.sidebar ul {
   list-style-type: none;
@@ -590,7 +655,6 @@ aside.sidebar .accordion-footer ul a:hover {
 }
 .card-title {
   text-align: left;
-  white-space: nowrap;
   margin: 1rem 0 0;
 }
 .card-img img {
