--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -117,8 +117,19 @@ section.section-intro {
   padding-top: var(--space);
   padding-bottom: var(--space);
 }
+@media screen and (max-width: 767px) {
+  section.section-intro {
+    padding-top: calc(var(--space) / 2);
+    padding-bottom: calc(var(--space) / 2);
+  }
+}
 section.section-intro form {
   padding-bottom: var(--space);
+}
+@media screen and (max-width: 767px) {
+  section.section-intro form {
+    padding-bottom: calc(var(--space) / 2);
+  }
 }
 section.section-intro .lead-main {
   max-width: 600px;
@@ -134,6 +145,17 @@ section.section-intro .filter-select .form-group i {
   font-size: 12px;
   color: #3E9E6C;
 }
+@media screen and (max-width: 767px) {
+  section.section-intro .filter-select .form-group i {
+    top: 38%;
+  }
+}
+@media screen and (max-width: 767px) {
+  section.section-intro .filter-select .form-group {
+    width: 260px;
+    margin: auto;
+  }
+}
 section.section-intro .filter-select .form-control {
   border-color: #F0D8B3;
   background-color: #FFFAF2;
@@ -143,9 +165,23 @@ section.section-intro .filter-select .form-control {
   padding: 10px 20px;
   color: #3E9E6C;
 }
+@media screen and (max-width: 767px) {
+  section.section-intro .filter-select .form-control {
+    width: 260px;
+    margin: 10px auto;
+  }
+}
+section.section-intro .filter-select .form-control:focus {
+  box-shadow: none;
+}
 @media screen and (min-width: 768px) {
   section.section-intro .filter-select .btn-primary {
     margin-left: 1.5rem;
+  }
+}
+@media screen and (max-width: 767px) {
+  section.section-intro .filter-select .btn-primary {
+    width: 260px;
   }
 }
 section.section-intro .swiper {
@@ -155,6 +191,13 @@ section.section-intro .swiper {
   border-radius: 1rem;
   overflow: hidden;
   margin-right: 0;
+}
+@media screen and (max-width: 767px) {
+  section.section-intro .swiper {
+    margin: 1rem 0 0;
+    min-height: auto;
+    width: 100%;
+  }
 }
 section.section-intro .swiper-wrapper, section.section-intro .swiper-slide {
   height: 100%;
@@ -166,6 +209,12 @@ section.section-intro .swiper-img {
   top: 0;
   width: 100%;
   height: 100%;
+}
+@media screen and (max-width: 767px) {
+  section.section-intro .swiper-img {
+    position: relative;
+    height: 250px;
+  }
 }
 section.section-intro .swiper-img img {
   object-fit: cover;
@@ -182,6 +231,11 @@ section.section-intro .swiper-button-prev, section.section-intro .swiper-button-
   bottom: 30px;
   left: auto;
   transition: all 0.15s ease-in-out;
+}
+@media screen and (max-width: 767px) {
+  section.section-intro .swiper-button-prev, section.section-intro .swiper-button-next {
+    display: none;
+  }
 }
 section.section-intro .swiper-button-prev:hover, section.section-intro .swiper-button-next:hover {
   background-color: #3E9E6C;
@@ -258,6 +312,12 @@ section.section-intro .section-slide-1 .swiper-content {
   justify-content: space-between;
   margin-left: auto;
   position: relative;
+}
+@media screen and (max-width: 767px) {
+  section.section-intro .section-slide-1 .swiper-content {
+    width: 100%;
+    max-width: 100%;
+  }
 }
 section.section-intro .section-slide-1 .swiper-content .btn-outline {
   border-color: #d0d0d0;
@@ -339,6 +399,12 @@ section.section-popular {
   padding-top: var(--space);
   padding-bottom: var(--space);
 }
+@media screen and (max-width: 767px) {
+  section.section-popular {
+    padding-top: calc(var(--space) / 2);
+    padding-bottom: calc(var(--space) / 2);
+  }
+}
 section.section-popular .lead-main {
   border-bottom: 1px solid #f3e1c4;
   padding-bottom: calc(var(--space) / 2);
@@ -350,6 +416,12 @@ section.section-popular .lead-main h2 {
 section.section-popular .card {
   background: transparent;
   border: none;
+}
+@media screen and (max-width: 767px) {
+  section.section-popular .card {
+    max-width: 260px;
+    margin: 1rem auto;
+  }
 }
 section.section-popular .card-rating {
   border-color: #f3e1c4;
