--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -87,8 +87,20 @@ section {
 		padding-top: var(--space);
 		padding-bottom: var(--space);
 
+		@media screen and (max-width: 767px) {
+			padding-top: calc(var(--space) / 2);
+			padding-bottom: calc(var(--space) / 2);
+		}
+
 		form {
 			padding-bottom: var(--space);
+
+			@media screen and (max-width: 767px) {
+				padding-bottom: calc(var(--space) / 2);
+			}
+			// @media screen and (max-width: 991px) {
+			// 	grid-gap: 20px;
+			// }
 		}
 
 		.lead-main {
@@ -105,6 +117,13 @@ section {
 					top: 16px;
 					font-size: 12px;
 					color: $color-green;
+					@media screen and (max-width: 767px) {
+						top: 38%;
+					}
+				}
+				@media screen and (max-width: 767px) {
+					width: 260px;
+					margin: auto;
 				}
 			}
 			.form-control {
@@ -115,11 +134,21 @@ section {
 				height: 50px;
 				padding: 10px 20px;
 				color: $color-green;
+				@media screen and (max-width: 767px) {
+					width: 260px;
+					margin: 10px auto;
+				}
+				&:focus {
+					box-shadow: none;
+				}
 			}
 
 			.btn-primary {
 				@media screen and (min-width: 768px) {
 					margin-left: 1.5rem;
+				}
+				@media screen and (max-width: 767px) {
+					width: 260px;
 				}
 			}
 		}
@@ -131,6 +160,12 @@ section {
 			border-radius: 1rem;
 			overflow: hidden;
 			margin-right: 0;
+
+			@media screen and (max-width: 767px) {
+				margin: 1rem 0 0;
+				min-height: auto;
+				width: 100%;
+			}
 
 			&-wrapper,
 			&-slide {
@@ -144,6 +179,11 @@ section {
 				top: 0;
 				width: 100%;
 				height: 100%;
+
+				@media screen and (max-width: 767px) {
+					position: relative;
+					height: 250px;
+				}
 
 				img {
 					object-fit: cover;
@@ -163,6 +203,10 @@ section {
 				bottom: 30px;
 				left: auto;
 				transition: all 0.15s ease-in-out;
+
+				@media screen and (max-width: 767px) {
+					display: none;
+				}
 
 				&:hover {
 					background-color: $color-green;
@@ -257,6 +301,11 @@ section {
 					justify-content: space-between;
 					margin-left: auto;
 					position: relative;
+
+					@media screen and (max-width: 767px) {
+						width: 100%;
+						max-width: 100%;
+					}
 
 					.btn-outline {
 						border-color: #d0d0d0;
@@ -399,6 +448,11 @@ section {
 		padding-top: var(--space);
 		padding-bottom: var(--space);
 
+		@media screen and (max-width: 767px) {
+			padding-top: calc(var(--space) / 2);
+			padding-bottom: calc(var(--space) / 2);
+		}
+
 		.lead-main {
 			border-bottom: 1px solid #f3e1c4;
 			padding-bottom: calc(var(--space) / 2);
@@ -412,6 +466,11 @@ section {
 		.card {
 			background: transparent;
 			border: none;
+
+			@media screen and (max-width: 767px) {
+				max-width: 260px;
+				margin: 1rem auto;
+			}
 
 			&-rating {
 				border-color: #f3e1c4;
